Add package version

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "private": true,
   "name": "slate-packages",
   "workspaces": [
     "packages/*"
   ],
+  "version": "0.57.2-alpha.0",
   "scripts": {
     "build": "yarn build:rollup && yarn build:next",
     "build:next": "cd ./site && next build && next export",
