--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "start": "npm-run-all --parallel --print-label watch serve",
     "test": "mocha --require ./config/babel/register.cjs ./packages/*/test/index.js",
     "test:inspect": "yarn test --inspect-brk",
-    "watch": "yarn build:rollup --watch",
-    "postinstall": "yarn build:rollup"
+    "watch": "yarn build:rollup --watch"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
@@ -70,7 +69,7 @@
     "react-error-boundary": "^1.2.5",
     "react-router-dom": "^5.1.2",
     "react-values": "^0.3.0",
-    "rollup": "^1.27.5",
+    "rollup": "^2.11.2",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
